# python-convert-image

./: LICENSE.txt  README.md  pyproject.toml
photo2drawing/: __main__.py  draw.py  sketch.py
src/: main.py  main_cv2.py
